logs.txt
In file included from /home/carolinedw/delivery/B4/B4_Oriented_Object_Progamming/EPITECH-Raytracer/./includes/Interface/../../src/Math/Vector3D.hpp:24,
                 from /home/carolinedw/delivery/B4/B4_Oriented_Object_Progamming/EPITECH-Raytracer/./includes/Interface/IObject.hpp:23,
                 from /home/carolinedw/delivery/B4/B4_Oriented_Object_Progamming/EPITECH-Raytracer/./includes/includes.hpp:14,
                 from /home/carolinedw/delivery/B4/B4_Oriented_Object_Progamming/EPITECH-Raytracer/src/Abstract/AObject.hpp:21,
                 from /home/carolinedw/delivery/B4/B4_Oriented_Object_Progamming/EPITECH-Raytracer/src/Abstract/AObject.cpp:19:
/home/carolinedw/delivery/B4/B4_Oriented_Object_Progamming/EPITECH-Raytracer/./includes/Interface/../../src/Math/./Point3D.hpp:38:13: error: ‘Vector3D’ does not name a type
   38 |             Vector3D translation(const Point3D& other) const;
      |             ^~~~~~~~
/home/carolinedw/delivery/B4/B4_Oriented_Object_Progamming/EPITECH-Raytracer/./includes/Interface/../../src/Math/./Point3D.hpp:41:37: error: ‘Vector3D’ does not name a type
   41 |             Point3D operator-(const Vector3D& other) const;
      |                                     ^~~~~~~~
/home/carolinedw/delivery/B4/B4_Oriented_Object_Progamming/EPITECH-Raytracer/./includes/Interface/../../src/Math/./Point3D.hpp:42:13: error: ‘Vector3D’ does not name a type
   42 |             Vector3D operator+(const Point3D& other) const;
      |             ^~~~~~~~
/home/carolinedw/delivery/B4/B4_Oriented_Object_Progamming/EPITECH-Raytracer/./includes/Interface/../../src/Math/./Point3D.hpp:43:13: error: ‘Vector3D’ does not name a type
   43 |             Vector3D operator-(const Point3D& other) const;
      |             ^~~~~~~~
In file included from /home/carolinedw/delivery/B4/B4_Oriented_Object_Progamming/EPITECH-Raytracer/./includes/includes.hpp:15:
/home/carolinedw/delivery/B4/B4_Oriented_Object_Progamming/EPITECH-Raytracer/./includes/Interface/IPrimitive.hpp:29:24: error: ‘Material’ in namespace ‘Raytracer’ does not name a type
   29 |             Raytracer::Material _material;
      |                        ^~~~~~~~
/home/carolinedw/delivery/B4/B4_Oriented_Object_Progamming/EPITECH-Raytracer/./includes/Interface/IPrimitive.hpp:31:38: error: ‘Raytracer::Material’ has not been declared
   31 |             virtual void setMaterial(Raytracer::Material material) = 0;
      |                                      ^~~~~~~~~
/home/carolinedw/delivery/B4/B4_Oriented_Object_Progamming/EPITECH-Raytracer/./includes/Interface/IPrimitive.hpp:32:38: error: ‘Material’ in namespace ‘Raytracer’ does not name a type
   32 |             virtual const Raytracer::Material& getMaterial() const = 0;
      |                                      ^~~~~~~~
/home/carolinedw/delivery/B4/B4_Oriented_Object_Progamming/EPITECH-Raytracer/./includes/Interface/IPrimitive.hpp:34:46: error: ‘Ray’ in namespace ‘Math’ does not name a type
   34 |             virtual bool doesHit(const Math::Ray& ray) const = 0;
      |                                              ^~~
/home/carolinedw/delivery/B4/B4_Oriented_Object_Progamming/EPITECH-Raytracer/./includes/Interface/IPrimitive.hpp:35:27: error: ‘Ray’ in namespace ‘Math’ does not name a type
   35 |             virtual Math::Ray bounce(const Math::Ray& ray) const = 0;
      |                           ^~~
make[2]: *** [CMakeFiles/raytracer.dir/build.make:76: CMakeFiles/raytracer.dir/src/Abstract/AObject.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/raytracer.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
